<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dabner_nav</name>
  <version>0.0.0</version>
  <description>This package is the Masters project started by Robert Dabney at Rensselaer Polytechnic Institute. This package is meant to interface with the stretch RE1 robot from Hello Robot to navigate the JEC</description>
  <maintainer email="hello-robot@todo.todo">hello-robot</maintainer>
  <license>TODO: License declaration</license>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <exec_depend>dabner_interfaces</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
